# DtWordTrainer

./: .gitignore  .testdat.wda  CMakeLists.txt  CMakePresets.json  DtWordTrainer.cpp  DtWordTrainer.h  DtWordTrainer.ui  FileParser.cpp  FileParser.h  Noun.cpp  Noun.h  TODO.md  Verb.cpp  Verb.h  Widget.ui  Word.h  Wordset.cpp  Wordset.h  main.cpp  testdat.dtw  testdat.dtw.old
DataZone/: Algorithm.cpp  Algorithm.h  Noun.cpp  Noun.h  Question.cpp  Question.h  QuestionBlock.cpp  QuestionBlock.h  Verb.cpp  Verb.h  Word.h  Wordset.cpp  Wordset.h
QuestionZone/: 4ChoiceQuestion.ui  FChoiceQuestion.cpp  FChoiceQuestion.h  FChoiceQuestion.ui  MChoiceFourDef.cpp  MChoiceFourDef.h  Question.cpp  Question.h  QuestionOverseer.cpp  QuestionOverseer.h
QuestionZone/GUI/: CHGNDGui.cpp  CHGNDGui.h  CHGNDGui.ui  MCFDGui.cpp  MCFDGui.h  MCFDGui.ui  QuestionOverseer.cpp  QuestionOverseer.h  TPDTWGui.cpp  TPDTWGui.h  TPDTWGui.ui
QuestionZone/Logic/: CHGNDLogic.cpp  CHGNDLogic.h  MCFDLogic.cpp  MCFDLogic.h  Question.cpp  Question.h  TPDTWLogic.cpp  TPDTWLogic.h  tpdtw.cpp  tpdtw.h
RootZone/: DtWordTrainer.cpp  DtWordTrainer.h  DtWordTrainer.qrc  DtWordTrainer.ui  MainScreen.cpp  MainScreen.h  MainScreen.ui  newWordScreen.cpp  newWordScreen.h
manualBuild/: CMakeCache.txt  DtWordTrainer  Makefile  cmake_install.cmake
manualBuild/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
manualBuild/DtWordTrainer_autogen/: deps  mocs_compilation.cpp
manualBuild/DtWordTrainer_autogen/67R4SO6XBU/: moc_DtWordTrainer.cpp  moc_DtWordTrainer.cpp.d  moc_MainScreen.cpp  moc_MainScreen.cpp.d  qrc_DtWordTrainer.cpp
manualBuild/DtWordTrainer_autogen/YTQ4KHM74N/: moc_MCFDGui.cpp  moc_MCFDGui.cpp.d  moc_QuestionOverseer.cpp  moc_QuestionOverseer.cpp.d  moc_TPDTWGui.cpp  moc_TPDTWGui.cpp.d
manualBuild/DtWordTrainer_autogen/include/: ui_MCFDGui.h  ui_MainScreen.h  ui_TPDTWGui.h
